# fastapi-online-chat

./: .dockerignore  .env  README.md  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: env.py
celery_app/: Dockerfile  config.py  requirements.txt  tasks.py
src/: Dockerfile  config.py  main.py  requirements.txt
src/data/: database.py  dependencies.py
src/frontend/static/css/: chat.css
src/frontend/templates/: chat.html  layout.html  login.html  navbar.html  register.html  users_list.html
src/models/: __init__.py  message.py  schemas.py  user.py
src/services/: auth.py  messages.py  users.py
src/web/api/: auth.py  messages.py  users.py
src/web/views/: auth.py  messages.py  messages_ws.py
