[tool.poetry]
name = "mindfusiontesttask"
version = "0.1.0"
description = ""
authors = ["sergey240702 <sergey240702@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.115.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

jinja2 = "^3.1.4"
requests = "^2.32.3"
websockets = "^13.1"
python-multipart = "^0.0.12"

jwt = "^1.3.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-jose = "^3.3.0"

pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"

icecream = "^2.1.3"
celery = "^5.4.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
